--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="TitleThisMonth">ThisMonth</string>
+    <string name="open">open</string>
+    <string name="close">close</string>
 </resources>
