--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,22 @@
     <string name="TitleThisMonth">ThisMonth</string>
     <string name="open">open</string>
     <string name="close">close</string>
+
+
+    <string-array name="spinner_month_this">
+        <item>текущий месяц</item>
+        <item>прошлый месяц</item>
+        <item>все время</item>
+        <item>выбрать месяц...</item>
+    </string-array>
+
+    <string-array name="spinner_transaction">
+        <item>текущем месяце</item>
+        <item>следующем месяце</item>
+    </string-array>
+    <string-array name="valute">
+        <item>DOL</item>
+        <item>EUR</item>
+        <item>RUB</item>
+    </string-array>
 </resources>
