--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
         <item>DOL</item>
         <item>EUR</item>
         <item>RUB</item>
+        <item>GBP</item>
     </string-array>
 </resources>
